Added more htmls

--- a/table.html
+++ b/table.html
@@ -5,8 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table,
+        th,
+        td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            column-width: 100px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    
+        <table>
+            <tr>
+                <th colspan="2"></th>
+                <th>name</th>
+                <th>Mass</th>
+                <th>Diameter</th>
+                <th>Density</th>
+                <th>Gravity</th>
+                <th>Length</th>
+            </tr>
+            <tbody>
+                <tr>
+                    <th rowspan="4" colspan="2">Terrestrial Planet</th>
+                    <th>Mercury</th>
+                    <td>0.330</td>
+                    <td>4,879</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                    <td>4222.6</td>
+                </tr>
+                <tr>
+                    <th>Venus</th>
+                    <td>0.330</td>
+                    <td>4,879</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                    <td>4222.6</td>
+                </tr>
+                <tr>
+                    <th>Earth</th>
+                    <td>0.330</td>
+                    <td>4,879</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                    <td>4222.6</td>
+                </tr>
+                <tr>
+                    <th>Mars</th>
+                    <td>0.330</td>
+                    <td>4,879</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                    <td>4222.6</td>
+                </tr>
+                <tr>
+                    <th rowspan="4">Jovian Planet</th>
+                    <th rowspan="2">Gas Gaints</th>
+                    <th>Jupiter</th>
+                    <td>1896</td>
+                    <td>142,6476</td>
+                    <td>1325</td>
+                    <td>23.1</td>
+                    <td>9.9</td>
+                </tr>
+                <tr>
+                    <th>Saturn</th>
+                    <td>98</td>
+                    <td>1896</td>
+                    <td>142,6476</td>
+                    <td>1325</td>
+                    <td>23.1</td>
+                </tr>
+                <tr>
+                    <th rowspan="2">ice gaints</th>
+                    <th>Uranus</th>
+                    <td>98</td>
+                    <td>1896</td>
+                    <td>142,6476</td>
+                    <td>1325</td>
+                    <td>23.1</td>
+                </tr>
+                <tr>
+                    <th>Uranus</th>
+                    <td>98</td>
+                    <td>1896</td>
+                    <td>142,6476</td>
+                    <td>1325</td>
+                    <td>23.1</td>
+                </tr>
+            </tbody>
+        </table>
 </body>
 </html>
